added investor ka phote

--- a/src/main/resources/iouWeb/investor.html
+++ b/src/main/resources/iouWeb/investor.html
@@ -74,8 +74,7 @@ document.getElementById("txnid").innerHTML=todayDate;
     </header>
     <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-            <img ng-show="demoApp.thisNode=='CN=UH00001,O=NodeC'" src="images/user.jpg" class="demo-avatar">
-            <img ng-show="demoApp.thisNode=='CN=UH00002,O=NodeD'" src="images/User2.jpg" class="demo-avatar">
+            <img  src="images/user.jpg" class="demo-avatar">
             <div class="demo-avatar-dropdown">
                 <span>{{demoApp.thisNode}}</span>
                 <!--      <div class="mdl-layout-spacer"></div>
