--- a/src/main/resources/iouWeb/TransferAgent.html
+++ b/src/main/resources/iouWeb/TransferAgent.html
@@ -397,6 +397,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[4]}}</td>
                                 <td class="vert-align">{{demoApp.holding.split(',')[8]}}</td>-->
                                 <td  align="right">{{demoApp.nav.split(',')[0]}}</td>
+                                  <td class="vert-align" id ="HKIV01NavValue">{{demoApp.navValues.split(',')[0]}}</td>
                                 <!--  <td class="vert-align"></td>-->
                             </tr>
                             <tr>
@@ -405,6 +406,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[5]}}</td>
                                 <td class="vert-align">{{demoApp.holding.split(',')[9]}}</td>-->
                                 <td  align="right">{{demoApp.nav.split(',')[1]}}</td>
+                                  <td class="vert-align" id ="DBKS01NavValue">{{demoApp.navValues.split(',')[1]}}</td>
                                 <!--<td class="vert-align"></td>-->
                             </tr>
                             <tr>
@@ -414,6 +416,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[6]}}</td>
                                 <td class="vert-align">{{demoApp.holding.split(',')[10]}}</td>-->
                                 <td  align="right">{{demoApp.nav.split(',')[2]}}</td>
+                                  <td class="vert-align" id ="DBKS02NavValue">{{demoApp.navValues.split(',')[2]}}</td>
                                 <!--<td class="vert-align"></td>-->
                             </tr>
                             <tr>
@@ -423,7 +426,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[7]}}</td>
                                 <td class="vert-align">{{demoApp.holding.split(',')[11]}}</td>-->
                                 <td  align="right">{{demoApp.nav.split(',')[3]}}</td>
-
+                                    <td class="vert-align" id ="LUKT01NavValue">{{demoApp.navValues.split(',')[3]}}</td>
                             </tr>
                             <!-- <td class="vert-align">{{iou.paid}}</td>-->
                             <!-- <td>
