--- a/src/main/resources/iouWeb/investor.html
+++ b/src/main/resources/iouWeb/investor.html
@@ -380,6 +380,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right">{{demoApp.holding.split(',')[0]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[4]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[8]}}</td>
+                                        <td class="vert-align" id ="HKIV01NavValue">{{demoApp.navValues.split(',')[0]}}</td>
                                         <!--  <td class="vert-align"></td>-->
                                     </tr>
                                     <tr>
@@ -387,6 +388,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right">{{demoApp.holding.split(',')[1]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[5]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[9]}}</td>
+                                        <td class="vert-align" id ="DBKS01NavValue">{{demoApp.navValues.split(',')[1]}}</td>
                                         <!--<td class="vert-align"></td>-->
                                     </tr>
                                     <tr>
@@ -395,6 +397,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right">{{demoApp.holding.split(',')[2]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[6]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[10]}}</td>
+                                        <td class="vert-align" id ="DBKS02NavValue">{{demoApp.navValues.split(',')[2]}}</td>
                                         <!--<td class="vert-align"></td>-->
                                     </tr>
                                     <tr>
@@ -403,6 +406,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right">{{demoApp.holding.split(',')[3]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[7]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[11]}}</td>
+                                        <td class="vert-align" id ="LUKT01NavValue">{{demoApp.navValues.split(',')[3]}}</td>
                                     </tr>
                                     <!-- <td class="vert-align">{{iou.paid}}</td>-->
                                     <!-- <td>
