--- a/src/main/resources/iouWeb/TransferAgent.html
+++ b/src/main/resources/iouWeb/TransferAgent.html
@@ -395,8 +395,8 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td class="vert-align">HKIV01</td>
                                 <td  align="right">{{demoApp.holding.split(',')[0]}}</td>
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[4]}}</td>
-                                <td class="vert-align">{{demoApp.holding.split(',')[8]}}</td>-->
-                                <td  align="right">{{demoApp.nav.split(',')[0]}}</td>
+                                <td class="vert-align">{{demoApp.holding.split(',')[8]}}</td>
+                                <td  align="right">{{demoApp.nav.split(',')[0]}}</td>-->
                                   <td class="vert-align" id ="HKIV01NavValue">{{demoApp.navValues.split(',')[0]}}</td>
                                 <!--  <td class="vert-align"></td>-->
                             </tr>
@@ -414,8 +414,8 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td class="vert-align">DBKS02</td>
                                 <td  align="right">{{demoApp.holding.split(',')[2]}}</td>
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[6]}}</td>
-                                <td class="vert-align">{{demoApp.holding.split(',')[10]}}</td>-->
-                                <td  align="right">{{demoApp.nav.split(',')[2]}}</td>
+                                <td class="vert-align">{{demoApp.holding.split(',')[10]}}</td>
+                                <td  align="right">{{demoApp.nav.split(',')[2]}}</td>-->
                                   <td class="vert-align" id ="DBKS02NavValue">{{demoApp.navValues.split(',')[2]}}</td>
                                 <!--<td class="vert-align"></td>-->
                             </tr>
@@ -424,8 +424,8 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td class="vert-align">LUKT01</td>
                                 <td  align="right">{{demoApp.holding.split(',')[3]}}</td>
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[7]}}</td>
-                                <td class="vert-align">{{demoApp.holding.split(',')[11]}}</td>-->
-                                <td  align="right">{{demoApp.nav.split(',')[3]}}</td>
+                                <td class="vert-align">{{demoApp.holding.split(',')[11]}}</td>
+                                <td  align="right">{{demoApp.nav.split(',')[3]}}</td>-->
                                     <td class="vert-align" id ="LUKT01NavValue">{{demoApp.navValues.split(',')[3]}}</td>
                             </tr>
                             <!-- <td class="vert-align">{{iou.paid}}</td>-->
