--- a/src/main/resources/iouWeb/TransferAgent.html
+++ b/src/main/resources/iouWeb/TransferAgent.html
@@ -404,8 +404,8 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <td class="vert-align">DBKS01</td>
                                 <td  align="right">{{demoApp.holding.split(',')[1]}}</td>
                                 <!--<td class="vert-align">{{demoApp.holding.split(',')[5]}}</td>
-                                <td class="vert-align">{{demoApp.holding.split(',')[9]}}</td>-->
-                                <td  align="right">{{demoApp.nav.split(',')[1]}}</td>
+                                <td class="vert-align">{{demoApp.holding.split(',')[9]}}</td>
+                                <td  align="right">{{demoApp.nav.split(',')[1]}}</td>-->
                                   <td class="vert-align" id ="DBKS01NavValue">{{demoApp.navValues.split(',')[1]}}</td>
                                 <!--<td class="vert-align"></td>-->
                             </tr>
